info boxes - fixed non-wrapping title

--- a/im/project.css
+++ b/im/project.css
@@ -327,7 +327,6 @@ div.info > div:first-child {
     background-position: 20px 10px;
     background-size: 50px;
     background-color: #657777;
-    height: 60px;
     line-height: 60px;
     padding: 10;
     padding-left: 90px;
